--- a/pages/confirm/confirm.wxss
+++ b/pages/confirm/confirm.wxss
@@ -33,6 +33,24 @@
     vertical-align: middle;
 }
 
+
+/**/
+.beizhu{
+    padding: 30px 40px 40px 30px;
+    border-bottom: 1px solid #aaa;
+}
+.beizhu-text{
+    margin-top: 4px;
+    margin-right: 20px;
+    font-size: 16px;
+    float: left;
+}
+.beizhu-input{
+    padding-left: 10px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+}
+
 /*底部去支付界面*/
 /*底部提交订单部分界面*/
 .order-view{
