--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -26,21 +26,19 @@
   </view>
 
 <!--右侧菜单-->
-  <scroll-view scroll-y='true' style='height:1200rpx' bindscroll='scroll' scroll-into-view='{{toView}}' scroll-top='{{scrollTop}}'>
-    <view class='content' id='a{{index}}' wx:for='{{foodlistData}}' wx:key='unique'>
+  <scroll-view scroll-y="true" style='height:1200rpx;' bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+    <view class="content" id="a{{index}}" wx:for="{{listData}}" wx:key="unique">
       <view class='list-tab'>{{item.name}}</view>
-      <view class='content-list' wx:for='{{item.foods}}' wx:key='unique' wx:for-item='items' wx:key-index='indexs'>
+      <view class='content-list' wx:for="{{item.foods}}" wx:key="unique" wx:for-item="items" wx:for-index="indexs">
         <view class='list-image-box'>
-        <image class='list-image' mode='scaleToFill' src='{{items.image_url}}'></image>
-        <view>
-          <view class='issue-name'>
-            <view>{{items.name}}</view>
-            <view style='margin-top;20rpx;color:#f05a86'>
-              ￥{{items.specfoods[0].price}}.00
-              <icon class='plus-icon' data-type='{{index}}' data-index='{{indexs}}' bindtap='selectInfo'></icon>
-            </view>
-          </view>
+          <image class="list-image" mode="widthFix" src='{{items.image_url}}'></image>
         </view>
+        <view class='issue-name'>
+          <view>{{items.name}}</view>
+          <view style='margin-top:20rpx;color:#F05A86'>
+            ¥ {{items.price}}.00
+            <span class='plus-icon' bindtap='addToCart'>+</span>
+          </view>
         </view>
       </view>
     </view>
@@ -50,13 +48,45 @@
   <!--加入购物车提示-->
   <!--toast hidden="{{toastHidden}}">已加入购物车</toast>
 
+  <!--显示购物车详细信息-->
+<view class="drawer_screen" bindtap="showCartList" data-statu="close" wx:if="{{showCart}}"></view>
+<view class="cartlist-float" wx:if="{{showCart}}">
+  <view style='background:#F0F0F0;height:30px'>
+    <label class='label-cart-bar'>
+      <label style='padding:5px'>已选商品</label>
+    </label>
+    <label class='icon-clear' bindtap='clearCartList'>
+      <i class="iconfont icon-lajitong"></i>
+      <label class="label-clear">清空购物车</label>
+    </label>
+  </view>
+  <scroll-view scroll-y="true" class="{{cartList.length>5?'cart-scroll-list':''}}">
+
+    <view class='cart-list-box' wx:for="{{cartList}}" wx:key="unique" style='border-bottom:1px #E3E3E3 solid'>
+      <view class='list-info'>
+        <view>{{item.name}}</view>
+        <view class='list-info-size'>{{item.detail}}</view>
+      </view>
+      <view style='width:50%;padding:10px;'>
+        <view style='float:right'>
+          <label class='activity-color'>¥ {{item.sum}}.00</label>
+          <i class="iconfont icon-jian icon-li-circle" data-index="{{index}}" bindtap="decNumber"></i>
+          {{item.number}}
+          <i class="iconfont icon-jiahao2fill activity-color font20" data-index="{{index}}" bindtap="addNumber"></i>
+        </view>
+      </view>
+    </view>
+  </scroll-view>
+</view>
+
+
   <!--提交订单-->
   <view class='order-view' style="display{{modalHidden? 'flex':'none'}};">
     <view class='order-number'>
-      <image class='cart' src='../../images/cart.png' mode='scaleToFill'></image>
+      <image class='cart' src='../../images/cart.png' mode='scaleToFill' bindtap='showCart'></image>
       <span class='order-number-text'>{{orderNumber}}</span>
-      <span class='cost' wx:if="{{totalCost==0}}">购物车是空的</span>
-      <span class='cost' wx:if="{{totalCost!=0}}">￥{{totalCost}}</span>
+      <span class='cost' wx:if="{{sumMoney==0}}">购物车是空的</span>
+      <span class='cost' wx:if="{{sumMoney!=0}}">￥{{sumMoney}}</span>
     </view>
     <view class='submit-order' bindtap='submitClick'>提交订单</view>
   </view>
