--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -37,7 +37,7 @@
           <view>{{items.name}}</view>
           <view style='margin-top:20rpx;color:#F05A86'>
             ¥ {{items.price}}.00
-            <span class='plus-icon' bindtap='addToCart'>+</span>
+            <span class='plus-icon' data-type='{{index}}' data-index='{{indexs}}' bindtap='addToCart'>+</span>
           </view>
         </view>
       </view>
@@ -49,23 +49,21 @@
   <!--toast hidden="{{toastHidden}}">已加入购物车</toast>
 
   <!--显示购物车详细信息-->
-<view class="drawer_screen" bindtap="showCartList" data-statu="close" wx:if="{{showCart}}"></view>
+<view class="drawer_screen" bindtap="showCart" data-statu="close" wx:if="{{showCart}}"></view>
 <view class="cartlist-float" wx:if="{{showCart}}">
   <view style='background:#F0F0F0;height:30px'>
     <label class='label-cart-bar'>
       <label style='padding:5px'>已选商品</label>
     </label>
-    <label class='icon-clear' bindtap='clearCartList'>
+    <label class='icon-clear' bindtap='clearCart'>
       <i class="iconfont icon-lajitong"></i>
       <label class="label-clear">清空购物车</label>
     </label>
   </view>
   <scroll-view scroll-y="true" class="{{cartList.length>5?'cart-scroll-list':''}}">
-
     <view class='cart-list-box' wx:for="{{cartList}}" wx:key="unique" style='border-bottom:1px #E3E3E3 solid'>
       <view class='list-info'>
         <view>{{item.name}}</view>
-        <view class='list-info-size'>{{item.detail}}</view>
       </view>
       <view style='width:50%;padding:10px;'>
         <view style='float:right'>
