--- a/pages/confirm/confirm.wxml
+++ b/pages/confirm/confirm.wxml
@@ -1,3 +1,4 @@
+<!--选择桌号与填写备注-->
 <view>
   <view class='table'>
     <view class='table-head'>桌号</view>
@@ -16,7 +17,7 @@
 
   <view class='beizhu'>
     <view class='beizhu-text'>备注</view>
-    <input class='beizhu-input'> placeholder=""></input>
+    <input class='beizhu-input' placeholder="如有特殊需要请备注"></input>
   </view>
 
 
@@ -24,8 +25,8 @@
   <view class='order-view' style="display{{modalHidden? 'flex':'none'}};">
     <view class='order-number'>
       <image class='cart' src='../../images/cart.png' mode='scaleToFill'></image>
-      <span class='order-number-text'>5</span>
-      <span>￥{{totalCost}}</span>
+      <span class='order-number-text'>{{orderNumber}}</span>
+      <span>￥{{sumMoney}}</span>
     </view>
     <view class='submit-order' bindtap='payforit'>去支付</view>
   </view>
